@@ -17,6 +17,9 @@ KERNEL_DW3_COCO1	= $(MD)/rel $(MD)/krn $(MD)/krnp2 $(MD)/init \
 KERNEL_DW3_COCO2	= $(MD)/rel $(MD)/krn $(MD)/krnp2 $(MD)/init \
 		$(MD)/boot_dw3
 
+KERNEL_BECKER_COCO	= $(MD)/rel $(MD)/krn $(MD)/krnp2 $(MD)/init \
+		$(MD)/boot_dw3_becker
+
 IDE		= $(3PD)/ide
 SCSI		= $(3PD)/scsisys
 
@@ -137,6 +140,27 @@ BOOTFILE_COVDG_DW3_COCO2	= $(MD)/ioman \
 		$(MD)/clock_60hz $(MD)/clock2_dw3 \
 		$(MD)/sysgo_dd
 
+BOOTFILE_COVDG_BECKER_COCO	= $(MD)/ioman \
+		$(MD)/rbf.mn $(MD)/rb1773.dr \
+		$(MD)/d0_80d.dd $(MD)/d1_40d.dd $(MD)/d2_40d.dd \
+		$(MD)/rbdw3.dr $(MD)/dw3_becker.sb \
+		$(MD)/ddx0.dd $(MD)/x1.dd $(MD)/x2.dd $(MD)/x3.dd \
+		$(MD)/scf.mn \
+		$(MD)/vtio.dr $(MD)/covdg.io $(MD)/term32.dt \
+		$(MD)/scdwn.dr \
+		$(MD)/n_scdwn.dd $(MD)/n1_scdwn.dd $(MD)/n2_scdwn.dd \
+		$(MD)/n3_scdwn.dd $(MD)/n4_scdwn.dd $(MD)/n5_scdwn.dd \
+		$(MD)/n6_scdwn.dd $(MD)/n7_scdwn.dd $(MD)/n8_scdwn.dd \
+		$(MD)/n9_scdwn.dd $(MD)/n10_scdwn.dd $(MD)/n11_scdwn.dd \
+		$(MD)/n12_scdwn.dd $(MD)/n13_scdwn.dd $(MD)/midi_scdwn.dd \
+		$(MD)/z1_scdwn.dd $(MD)/z2_scdwn.dd $(MD)/z3_scdwn.dd \
+		$(MD)/z4_scdwn.dd $(MD)/z5_scdwn.dd $(MD)/z6_scdwn.dd \
+		$(MD)/z7_scdwn.dd \
+		$(MD)/scdwp.dr $(MD)/p_scdwp.dd \
+		$(MD)/pipeman.mn $(MD)/piper.dr $(MD)/pipe.dd \
+		$(MD)/clock_60hz $(MD)/clock2_dw3 \
+		$(MD)/sysgo_dd
+
 BOOTFILE_COVDG_DS80	= $(MD)/ioman \
 		$(MD)/rbf.mn $(MD)/rb1773.dr \
 		$(MD)/d0_80d.dd $(MD)/d1_40d.dd $(MD)/d2_40d.dd \
@@ -197,10 +221,12 @@ BOOTFILE_COHR_DS80	= $(MD)/ioman \
 		$(MD)/clock_60hz $(MD)/clock2_soft \
 		$(MD)/sysgo_dd
 
-BOOTFILES	= bootfile_covdg bootfile_cohr bootfile_covdg_dw3_coco1 bootfile_covdg_dw3_coco2 \
-		bootfile_headless_dw3_coco1 bootfile_headless_dw3_coco2 \
-		bootfile_cohr_dw3_coco1 bootfile_cohr_dw3_coco2 bootfile_covdg_ds80 bootfile_cohr_ds80
-KERNELS		= kernel_1773 kernel_dw3_coco1 kernel_dw3_coco2
+BOOTFILES	= bootfile_covdg bootfile_cohr bootfile_covdg_dw3_coco1 \
+		bootfile_covdg_dw3_coco2 bootfile_headless_dw3_coco1 \
+		bootfile_headless_dw3_coco2 bootfile_cohr_dw3_coco1 \
+		bootfile_cohr_dw3_coco2 bootfile_covdg_ds80 \
+		bootfile_cohr_ds80 bootfile_covdg_becker_coco
+KERNELS		= kernel_1773 kernel_dw3_coco1 kernel_dw3_coco2 kernel_becker_coco
 
 ALLOBJS		= $(BOOTFILES) $(KERNELS)
 
@@ -230,6 +256,9 @@ bootfile_headless_dw3_coco2: $(BOOTFILE_HEADLESS_DW3_COCO2) $(DEPENDS)
 bootfile_covdg_dw3_coco2: $(BOOTFILE_COVDG_DW3_COCO2) $(DEPENDS)
 	$(MERGE) $(BOOTFILE_COVDG_DW3_COCO2)>$@
 
+bootfile_covdg_becker_coco: $(BOOTFILE_COVDG_BECKER_COCO) $(DEPENDS)
+	$(MERGE) $(BOOTFILE_COVDG_BECKER_COCO)>$@
+
 bootfile_cohr_ds80: $(BOOTFILE_COHR_DS80) $(DEPENDS)
 	$(MERGE) $(BOOTFILE_COHR_DS80)>$@
 
@@ -251,6 +280,10 @@ kernel_dw3_coco1: $(KERNEL_DW3_COCO1) $(DEPENDS)
 
 kernel_dw3_coco2: $(KERNEL_DW3_COCO2) $(DEPENDS)
 	$(MERGE) $(KERNEL_DW3_COCO2)>$@
+	$(PADROM) 4608 $@
+
+kernel_becker_coco: $(KERNEL_BECKER_COCO) $(DEPENDS)
+	$(MERGE) $(KERNEL_BECKER_COCO)>$@
 	$(PADROM) 4608 $@
 
 clean:
